cluster/apps/traefik/traefik/ingress/rook-ceph/ingress-routes.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroute_v1alpha1.json
# Documentation: https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/crd/http/ingressroute/
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-routes-lan-https
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: ${CLUSTER_ISSUER}
    external-dns.kubernetes.io/hostname: ceph.lan.${EXTERNAL_DOMAIN}
    external-dns.kubernetes.io/target: ${TRAEFIK_IP4}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ceph.lan.${EXTERNAL_DOMAIN}`)
      middlewares:
        - name: lan-ip-whitelist
        - name: https-proto-header
        - name: compress
      services:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          passHostHeader: true
          port: 8443
          # HTTPS backend required for SAML SSO - python-saml validates request protocol
          scheme: https
          serversTransport: insecure-backend
  tls:
    secretName: "ceph-lan-${EXTERNAL_DOMAIN/./-}-tls"
